forEach and IIFE
With these amendments "forEach" and "IIFE"  functions have been added to the javascript file.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1></h1>
+    <h1>PokemonList</h1>
     <script src="js/scripts.js"></script>
   </body>
 </html>
