--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>java fundamentals</title>
+    <title>Pokemon list</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
