--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Pokemon list</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <title>Pokedex</title>
   </head>
   <body>
-    <h1>PokemonList</h1>
+    <h1>Pokemon List</h1>
+    <ul class='pokemon-list'></ul>
     <script src="js/scripts.js"></script>
   </body>
 </html>
