--- a/index.html
+++ b/index.html
@@ -3,16 +3,99 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <title>Pokedex</title>
+
+<!-- adding bootstraps.CSS to code first as code read from top to bottom-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+
+    <title>Pokedex</title>
+
   </head>
+
   <body>
-    <h1>Pokemon List</h1>
-    <ul class='pokemon-list'></ul>
-    <strong>
-  <script src="js/promise-polyfill.js"></script>
-  <script src="js/fetch.umd.js"></script>
-  <script src="js/scripts.js"></script>
-  </strong>
+
+<!-- adding a Navbar -->
+
+    <header>
+      <div class="container">
+<div class="navbar">
+  <img src="img/pokemon1.png" class="logo">
+  <nav>
+    <ul id="menuList">
+      <li><a href="index.html">Main Page</a></li>
+      <li><a href="haqqimizda.html">Pokemon List</a></li>
+    </ul>
+  </nav>
+</div>
+    </header>
+
+<!-- form validation + setting attributes to button so that the search is effectiv-->
+
+
+
+<!-- <div id='image-container'></div> dynamically editing the src of an img element></div> -->
+<!-- <ul class='pokemon-list'></ul>this part has been removeed for this exercice try first with, then without'></div> -->
+<!-- button id='show-modal'> Show modal </button> button removed-->
+<!-- <div id='modal-container'></div> old code for previous modal -->
+
+<!-- Button trigger modal -->
+
+
+
+
+<!-- Pokemon List -->
+    <div class="container">
+    <div class="row">
+    <div class="col">
+
+      <ul class="list-group">
+      <li class='list-group-item'></li>
+      </ul>
+
+    </div>
+    </div>
+    </div>
+
+<!-- Start Modal -->
+
+<div class="modal fade" id="pokemonModal" tabindex="-1" role="dialog" aria-labelledby="pokemonModalLabel" aria-hidden="true">
+<div class="modal-dialog" role="document">
+<div class="modal-content">
+
+<div class="modal-header">
+  <h5 class="modal-title" id="pokemonModalLabel"></h5>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+
+<div class="modal-body">
+  ...
+</div>
+
+</div>
+</div>
+</div>
+
+<!-- Modal end -->
+
+
+      <!--Referral to Jquery/ Popper/then Bootstarp.js to code-->
+      <!-- Dependencies of bootstrap JS file for it to work-->
+      <!-- the link to bootstrap JS file-->
+
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+
+    <!--<script src="js/eslintrc.json"></script>-->
+    <!--<script src="js/.eslintrc.json"></script>-->
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch-polyfill.umd.js"></script>
+    <!--<script src="js/mini.js"></script>-->
+    <script src="js/scripts.js"></script>
+
   </body>
 </html>
