--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 
     <!--<script src="js/eslintrc.json"></script>-->
     <!--<script src="js/.eslintrc.json"></script>-->
-    <script src="js/promise-polyfill.js"></script>
-    <script src="js/fetch-polyfill.umd.js"></script>
+    <script src="js/fetch-umd.js"></script>
     <script src="js/min.js"></script>
+    <script src="js/promise-polyfill.js"></script>
     <script src="js/scripts.js"></script>
 
   </body>
