--- a/index.html
+++ b/index.html
@@ -1,101 +1,78 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pokedex</title>
 
-<!-- adding bootstraps.CSS to code first as code read from top to bottom-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Pokedex</title>
 
-    <title>Pokedex</title>
+  <!-- adding bootstraps.CSS to code first as code read from top to bottom-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 
-  </head>
+  <title>Pokedex</title>
 
-  <body>
+</head>
 
-<!-- adding a Navbar -->
+<body>
+  <!-- adding a Navbar -->
 
-    <header>
-      <div class="container">
-<div class="navbar">
-  <img src="img/pokemon1.png" class="logo">
-  <nav>
-    <ul id="menuList">
-      <li><a href="index.html">Main Page</a></li>
-      <li><a href="haqqimizda.html">Pokemon List</a></li>
-    </ul>
-  </nav>
-</div>
-    </header>
-
-<!-- form validation + setting attributes to button so that the search is effectiv-->
-
-
-
-<!-- <div id='image-container'></div> dynamically editing the src of an img element></div> -->
-<!-- <ul class='pokemon-list'></ul>this part has been removeed for this exercice try first with, then without'></div> -->
-<!-- button id='show-modal'> Show modal </button> button removed-->
-<!-- <div id='modal-container'></div> old code for previous modal -->
-
-<!-- Button trigger modal -->
-
-
-
-
-<!-- Pokemon List -->
-    <div class="container">
-    <div class="row">
-    <div class="col">
-
-      <ul class="list-group">
-      <li class='list-group-item'></li>
-      </ul>
-
-    </div>
-    </div>
-    </div>
-
-<!-- Start Modal -->
-
-<div class="modal fade" id="pokemonModal" tabindex="-1" role="dialog" aria-labelledby="pokemonModalLabel" aria-hidden="true">
-<div class="modal-dialog" role="document">
-<div class="modal-content">
-
-<div class="modal-header">
-  <h5 class="modal-title" id="pokemonModalLabel"></h5>
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon float-right" aria-label="Toggle navigation"></span>
     </button>
-</div>
-
-<div class="modal-body">
-  ...
-</div>
-
-</div>
-</div>
-</div>
-
-<!-- Modal end -->
-
-
-      <!--Referral to Jquery/ Popper/then Bootstarp.js to code-->
-      <!-- Dependencies of bootstrap JS file for it to work-->
-      <!-- the link to bootstrap JS file-->
-
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
-
-    <!--<script src="js/eslintrc.json"></script>-->
-    <!--<script src="js/.eslintrc.json"></script>-->
-    <script src="js/fetch-umd.js"></script>
-    <script src="js/min.js"></script>
+    <div class="container">
+      <a class="navbar-brand" href="#"><img class="logo__img img-fluid" src="img/pokemon1.png"></a>
+      <div class="collapse navbar-collapse text-center justify-content-around" id="navbarToggler">
+        <div class="navbar-nav flex-lg-row">
+          <a class="nav-item nav-link active px-3" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link px-3" href="https://savalan11.github.io/portfolio-website/" target="blank">Portfolio</a>
+        </div>
+        <div class="p-2">
+          <form class="form-inline"></form>
+          <input class="form-control mr-sm-2 search" type="search" placeholder="Search a pokemon" aria-label="Search">
+          <form>
+        </div>
+      </div>
+  </nav>
+  <main>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <ul class="list-group list-unstyled flex-row flex-wrap w-80 just-content: center" data-toggle="modal" data-target="#Pokemon"></ul>
+          <div class="modal fade" id="Pokemon" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="col-12 modal-title text-center text-capitalize" id="exampleModalLabel"></h5>
+                </div>
+                <div class="modal-body text-capitalize">
+                  ...
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary" data-dismiss="modal">
+                    Close
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <div id="loading-element"></div>
+      <ul class="pokemon-list list-group"></ul>
+      <div id='modal-container'></div>
+      <div class = "button-wrapper"></div>
+      <div id='image-container'></div> -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- jquery minified version is added instead of the slim.min.js version -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch-umd.js"></script>
+    <!--<script src="js/.min.js"></script>-->
     <script src="js/scripts.js"></script>
+</body>
 
-  </body>
 </html>
