--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="collapse navbar-collapse text-center justify-content-around" id="navbarToggler">
         <div class="navbar-nav flex-lg-row">
           <a class="nav-item nav-link active px-3" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link px-3" href="https://savalan11.github.io/portfolio-website/" target="blank">Portfolio</a>
+          <a class="nav-item nav-link px-3" href="https://savalan11.github.io/portfolio-react/" target="blank">Portfolio</a>
         </div>
         <div class="p-2">
           <form class="form-inline"></form>
